# programasyon-python

./: .energie_mecanique.py.swp  Makefile  README.md  Turtle_work.py  bay_note.py  baz.yml  done.csv  done_pou_li.tsv  energie_mecanique.py  essay.py  f_class.py  f_class_wip.py  fibo.py  file.txt  graph_function.py  integrale.py  integrale2.py  inverse.py  jupy.py  li_dokiman.py  my_fortune.py  power.py  pyproject.toml  squares.py  systeme_mecanique.py
.github/workflows/: metke.yml
energie_mecanique/: __init__.py  essay.py
functions&/: essay.py  get_roots.py  graph_function.py  make_call.py  second_site_example.py  send_what_msg.py  site_example.py
other_files/: README.md  Turtle_work.py  integrale2.py
tests/: __init__.py  test_energie_mecanique.py
