[tool.poetry]
name = "programasyon-python"
version = "0.1.1"
description = ""
authors = ["Dede Assann <dedeassann20@gmail.com>", "J. Tipan Verella <tverella@tunein.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

Kivy~=2.1.0
pygame~=2.1.2
numpy~=1.23.1
pandas~=1.4.3